--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <exec.mainClass>com.mycompany.exerciciomemento.ExercicioMemento</exec.mainClass>
+        <exec.mainClass>com.mycompany.exerciciomemento.principal.Principal</exec.mainClass>
     </properties>
 </project>
